// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGravatarUrl Renders a custom component with the correct url passed in through props 1`] = `
<text
  value="https://www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?default=monsterid&size=250"
/>
`;

exports[`getGravatarUrl Renders the default img tag with the correct url 1`] = `
<img
  src="https://www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?"
/>
`;

exports[`getGravatarUrl Renders the img tag with the correct url and options 1`] = `
<img
  src="https://www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?default=monsterid&size=250"
/>
`;
